--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,16 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy-jackson</artifactId>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.jboss.resteasy</groupId>-->
+<!--      <artifactId>resteasy-jaxb-provider</artifactId>-->
+<!--      <version>6.1.0.Final</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>com.sun.xml.bind</groupId>-->
+<!--      <artifactId>jaxb-impl</artifactId>-->
+<!--      <version>4.0.1</version>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-elytron-security-properties-file</artifactId>
